--- a/css/mui.css
+++ b/css/mui.css
@@ -1663,15 +1663,14 @@ h1{
   animation-name: mui-node-inserted;
   font-weight: 500;
   font-size: 18px;
+  text-shadow: 1px 1px 1px #303F9F;
   line-height: 18px;
   color: rgba(0, 0, 0, 0.87);
   text-transform: uppercase;
   transition: all 0.2s ease-in-out;
   display: inline-block;
   height: 36px;
-  padding:30px 0 30px 30px;
-  margin-top: 6px;
-  margin-bottom: 6px;
+  padding:15px 0 30px 35px;
   border: none;
   border-radius: 0px;
   cursor: pointer;
@@ -1688,6 +1687,7 @@ h1{
   user-select: none;
   position: relative;
   overflow: hidden;
+  margin-left: 0!important;
 }
 
 .mui-btn.mui-text-black {
@@ -2675,7 +2675,7 @@ th {
   display: block;
   white-space: nowrap;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 200;
   font-size: 18px;
   color: #fff;
   cursor: default;
@@ -2691,11 +2691,11 @@ th {
 }
 
 .mui-tabs > li.mui-active {
-  border-bottom: 4px solid #2196F3;
+  border-bottom: 4px solid #E91E63;
 }
 
 .mui-tabs > li.mui-active > a {
-  color: #2196F3;
+  color: #E91E63;
 }
 
 .mui-tabs.mui-tabs-justified {
