--- a/css/my.css
+++ b/css/my.css
@@ -6,9 +6,10 @@ body{
 }
 
 .bg {/**background**/
-	background-image: url(../images/background-1.png);
+	background-color: #3F51B5;
 	width: 100%;
 	height: 300px;
+	margin-bottom: 20px;
 }
 
 .top {
@@ -36,5 +37,5 @@ body{
 
 .mui-tabs {
 	position: absolute;
-	top: 230px;
+	top: 251px;
 }
