--- a/css/my.css
+++ b/css/my.css
@@ -1,8 +1,14 @@
 /**body**/
 body{
-	background-repeat: no-repeat;
 	height: 100%;
 	width: 100%;
+	background-repeat: no-repeat;
+	background-color: #eee;
+}
+
+.mui-text-white{
+	padding:70px 10% 0 8%;
+	text-shadow:1px 1px 4px #283593;
 }
 
 /**top background**/
@@ -26,7 +32,24 @@ body{
 	top: 251px;
 }
 
-.mui-panel {
+/**content**/
+.home {
 	margin-left: 4%;
 	margin-right: 4%;
+} 
+
+.new{
+	width: 40%;
+	margin-left: 4%;
+	margin-right: 4%;
+} 
+
+.about{
+     margin-left: 4%;
+	 margin-right: 4%;
+}
+
+/**card**/
+.pic{
+	border: 0px 0px 0px 0px!important;
 }
