--- a/css/my.css
+++ b/css/my.css
@@ -51,17 +51,25 @@
 		}
 		
 		/**card**/
-		.pic-card{}
-		
+		.pic-card{
+		padding      : 0px 0px 10px 0px!important;
+		}
+				
 		.pic-card>img{
-		width            : 100%;
-		padding          : 0px 0px 0px 0px;
+		width        : 100%;
+		border       :0px 0px 50px 0px!important #000;
 		}
 		
+		p{
+			word-wrap: break-word;
+            word-break: break-all;
+            margin: 10px 10px 10px 10px;
+		}
+
 		.mui-panel{
-		border-radius    : 4px;
+		border-radius: 2px;
 		}
-		
+				
 		.mui-text-subhead{
 		text-indent      : 1em;
 		}
@@ -79,7 +87,5 @@
 		font-size        : 14px;
 		text-align       : center;
 		}
-		
-		
 		
 		
