--- a/css/mui.css
+++ b/css/mui.css
@@ -1640,7 +1640,7 @@ h1{
   margin-bottom: 20px;
   border-radius: 0;
   background-color: #FFF;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0px 2px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.16), -2px 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
 
 .mui-panel:before,
@@ -1671,7 +1671,7 @@ h1{
   height: 36px;
   padding:16px 0 30px 35px;
   border: none;
-  border-radius: 0px;
+  border-radius: 2px;
   cursor: pointer;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
