--- a/css/my.css
+++ b/css/my.css
@@ -65,7 +65,7 @@
      transition       : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
  
-/*home*/
+/*主页-卡片*/
     .home {
     text-align        : center;
     }
@@ -86,17 +86,16 @@
     border-top-right-radius: 2px;
     width             : 100%;
     } 
-
+    
     .img-title{
-    height            : 60px;
     width             : 100%;
     float             : left; 
-    position: relative;
-    top: -65px;
+    position          : relative;
+    top               : -53px;
     opacity           : 0.5;
     color             : #fff;
     text-align        : center;
-    line-height       : 60px;
+    line-height       : 48px;
     background-color  : #000;   
     }
 
@@ -116,7 +115,8 @@
     height            : 35px;
     position          : absolute;
     top               : 0px;
-    right             : 5px;
+    right             : 0px;
+    opacity           : 0.7;
     transition        : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
@@ -143,4 +143,4 @@
     font-size         : 22px;
     }
 
-/*about*/
+/*关于*/
