--- a/css/my.css
+++ b/css/my.css
@@ -81,17 +81,19 @@
     box-shadow        : 0 1px 1.5px 0 rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.24);
     }
 
-    .card > img{
+    .card > img {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     width             : 100%;
     } 
-    
+   
+   .zc{background-color:#B0BEC5;} 
+
     .img-title{
     width             : 100%;
     float             : left; 
     position          : relative;
-    top               : -53px;
+    top               : -54px;
     opacity           : 0.5;
     color             : #fff;
     text-align        : center;
