--- a/css/my.css
+++ b/css/my.css
@@ -76,24 +76,26 @@
     position          : static;
     background-color  : #fff;
     width             : 300px;
-    margin            : 0px 12px 15px 12px;
+    margin            : 0px 8px 15px 8px;
     border-radius     : 2px;
     box-shadow        : 0 1px 1.5px 0 rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.24);
-    }
+    } 
 
-    .card > img {
+    .card > img:first-child,.card > svg:first-child{      
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     width             : 100%;
-    } 
+   }
    
-   .zc{background-color:#B0BEC5;} 
+    .zc{
+    background-color  :#B0BEC5;
+    } 
 
     .img-title{
     width             : 100%;
     float             : left; 
     position          : relative;
-    top               : -54px;
+    top               : -53.5px;
     opacity           : 0.5;
     color             : #fff;
     text-align        : center;
