--- a/css/my.css
+++ b/css/my.css
@@ -85,6 +85,7 @@
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     width             : 100%;
+    height            : 213px;
    }
    
     .zc{
