--- a/css/my.css
+++ b/css/my.css
@@ -1,4 +1,4 @@
-/*默认样式*/
+默认样式*/
     body{
     margin            : 0;
     background-color  : #eee;
@@ -12,6 +12,15 @@
     font-size         : 25px;
     font-family       : Verdana,"Microsoft YaHei";
     font-weight       : 300;
+    }
+ 
+    hr{
+    margin-right      : 50px;
+    opacity           : 0.3;
+    margin-bottom     : 8px;
+    height            : 2px;
+    border-radius     : 10px;
+    background-color  : #ECEFF1;
     }
 
 /*菜单*/
@@ -114,6 +123,7 @@
 
     legend{
     margin            : 60px 0px 10px 0px;
+    transition        : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
  
     .show-ic{
@@ -125,11 +135,11 @@
     transition        : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
-    label{
+    label,.label{
     font-size         : 21px;
     }
 
-    input{
+    input[type=number]{
     font-size         : 20px;
     position          : relative;
     width             : 55%;
@@ -139,7 +149,7 @@
     margin            : 20px 0px 20px 0px;
     }
     
-    input:focus{
+    input[type=number]:focus{
     border-color      : #1976D2;
     transition        : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
@@ -148,4 +158,79 @@
     font-size         : 22px;
     }
 
-/*关于*/
+    .disabled{
+    border            : 0;
+    height            : 36px;
+    width             : 100px!important;
+    }
+
+/*radio*/
+    .radio {
+    display           : inline-block;
+    padding-right     : 20px;
+    font-size         : 18px;
+    line-height       : 49px;
+    cursor            : pointer;
+    }
+ 
+    .radio:hover .inner {
+    -webkit-transform : scale(0.5);
+    -ms-transform     : scale(0.5);
+    transform         : scale(0.5);
+    opacity           : .5;
+    }
+ 
+    .radio input {
+    width             : 1px;
+    height            : 1px;
+    opacity           : 0;
+    }
+ 
+    .radio input:checked + .outer .inner {
+    -webkit-transform : scale(1);
+    -ms-transform     : scale(1);
+    transform         : scale(1);
+    opacity           : 1;
+    }
+ 
+    .radio input:checked + .outer { 
+    border            : 3px solid #f08b3b; 
+    }
+ 
+    .radio input:focus + .outer .inner {
+    -webkit-transform : scale(1);
+    -ms-transform     : scale(1);
+    transform         : scale(1);
+    opacity           : 1;
+    background-color  : #e67012;
+    }
+ 
+    .radio .outer {
+    width             : 15px;
+    height            : 15px;
+    display           : block;
+    float             : left;
+    margin            : 14px 9px 10px 0px;
+    border            : 3px solid #1976D2;
+    border-radius     : 50%;
+    }
+ 
+    .radio .inner {
+    -webkit-transition: all 0.25s ease-in-out;
+    transition        : all 0.25s ease-in-out;
+    width             : 11px;
+    height            : 11px;
+    -webkit-transform : scale(0);
+    -ms-transform     : scale(0);
+    transform         : scale(0);
+    display           : block;
+    margin-right      : auto;
+    margin-left       : auto;
+    margin-top        : 1.9px;
+    border-radius     : 50%;
+    background-color  : #f08b3b;
+    opacity           : 0;
+    }
+
+
+/*关于
