--- a/css/my.css
+++ b/css/my.css
@@ -23,7 +23,7 @@
     background-color  : #ECEFF1;
     }
 
-/*菜单*/
+/*标题-菜单*/
     .title{
     height            : 210px;
     width             : 100%;
@@ -39,6 +39,18 @@
     line-height       : 210px;/*垂直居中*/
     margin            : 0; 
     }
+
+    @media (max-width: 480px) {
+      h1 {
+      font-size       : 48px;
+      }
+    }
+    @media (max-width: 450px) {
+      h1 {
+      font-size       : 40px;
+      }
+    }
+
 
     .menu{
     height            : 60px;
@@ -77,7 +89,6 @@
 /*主页-卡片*/
     .home {
     /*text-align        : center;*/
-    padding-left: 10
     }
 
     .card{
