--- a/css/my.css
+++ b/css/my.css
@@ -16,9 +16,8 @@
     }
  
     hr{
-    margin-right      : 50px;
     opacity           : 0.3;
-    margin-bottom     : 8px;
+    margin-bottom     : 2px;
     height            : 2px;
     border-radius     : 10px;
     background-color  : #ECEFF1;
@@ -173,6 +172,10 @@
     background-color  : #C8E6C9;
     }
 
+    .CC > img:first-of-type{
+    background-color: #FFEBEE;
+    }
+
 /*表单*/ 
     form{
     position          : relative;
@@ -298,7 +301,25 @@
     background-color  : #f08b3b;
     opacity           : 0;
     }
-    
+   
+/*select*/ 
+    select{
+    font-size         : 18px;
+    padding           : 2px 6px 2px 6px;
+    border            : 1px solid #f08b3b;
+    border-radius     : 3px;
+    cursor            : pointer;
+    outline           : none;
+    }
+
+    option{
+    font-size         : 18px;
+    padding           : 2px 6px 2px 6px;
+    border            : 1px solid #f08b3b;
+    border-radius     : 3px;  
+    }
+
+
 /*关于*/
     .about{
 
